# watchlog

./: .gitignore  CLAUDE.md  OAUTH_SETUP.md  PERSISTENT_LOGIN.md  PRD.md  README.md  main.py  pyproject.toml  requirements-dev.txt  setup.cfg  start-servers.sh  test_oauth.py
.cursor/rules/: backend-development.mdc  coding-standards.mdc  development-workflow.mdc  frontend-development.mdc  project-overview.mdc
backend/: auth.py  env.example  main.py  requirements.txt
documentation/: DATA_SOURCES.md  PRD.md
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/api/auth/callback/: route.ts
frontend/app/components/: ProtectedRoute.tsx
frontend/app/contexts/: AuthContext.tsx
frontend/app/dashboard/: page.tsx
frontend/app/login/: page.tsx
frontend/app/utils/: auth.ts
